code for service worker inside file

--- a/src/server/templates/index.pug
+++ b/src/server/templates/index.pug
@@ -194,7 +194,8 @@ html(lang='en')
           Moengage = moe({
               app_id:"4KK0OEEQLWKYGNZXJQJ5UO5B_DEBUG",
               debug_logs: 1,
-              cluster: "DC_3"
+              cluster: "DC_3",
+              swPath: "/serviceworker/serviceWorker.js"
           });
           Moengage.call_web_push();
         script.
