--- a/src/server/templates/index.pug
+++ b/src/server/templates/index.pug
@@ -195,7 +195,7 @@ html(lang='en')
               app_id:"4KK0OEEQLWKYGNZXJQJ5UO5B_DEBUG",
               debug_logs: 1,
               cluster: "DC_3",
-              swPath: "/serviceworker/serviceWorker.js"
+              swPath: "/serviceWorker.js"
           });
           Moengage.call_web_push();
         script.
