--- a/src/server/templates/index.pug
+++ b/src/server/templates/index.pug
@@ -21,7 +21,7 @@ html(lang='en')
             // Use the window load event to keep the page load performant
             // Add this line to the top of the file
             window.addEventListener('load', () => {
-              navigator.serviceWorker.register('/serviceWorker.js', {
+              navigator.serviceWorker.register('/serviceworker.js', {
                 scope: "/"
               });
             });
