--- a/src/components/Popups/styles.scss
+++ b/src/components/Popups/styles.scss
@@ -477,7 +477,7 @@
     margin-top: 40px;
     margin-bottom: 30px;
     color: grey;
-    font-size: 40px;
+    width: 50px;
   }
   .cerise-btn30 {
     width: 30%;
