--- a/src/containers/giftcard/styles.scss
+++ b/src/containers/giftcard/styles.scss
@@ -50,10 +50,11 @@ h2 {
 
 .gift-heading {
   padding-top: 20px;
-  font-size: 16px;
+  font-size: 14px;
   color: black;
   font-family: $font-Lato;
   letter-spacing: 0.5px;
+  font-weight: bold;
 }
 .gc-head {
   text-transform: uppercase;
