--- a/src/components/Popups/styles.scss
+++ b/src/components/Popups/styles.scss
@@ -867,9 +867,57 @@
   width: 1170px !important;
 }
 
+.video-popup-container {
+  width: 850px;
+  height: 523px;
+  border: 10px solid white;
+  position: fixed;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  box-sizing: content-box;
+  .cta {
+    bottom: 40px;
+    position: absolute;
+    width: 260px;
+    margin: 0 auto;
+    left: 50%;
+    transform: translate(-50%, 0);
+  }
+  .cross {
+    position: absolute;
+    right: 10px;
+    top: 10px;
+    font-weight: bold;
+    cursor: pointer;
+  }
+}
+
 @media screen and (max-width: 992px) {
   .maker-popup-fixed {
     height: 550px !important;
     width: 360px !important;
   }
+  .video-popup-container {
+    width: 320px;
+    height: 489px;
+    .cta {
+      bottom: 1em;
+      height: 48px;
+      line-height: 48px;
+      position: absolute;
+      width: 200px;
+      margin: 0 auto;
+      right: 10px;
+      left: auto;
+      transform: none;
+    }
+  }
+}
+
+.btn {
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  right: auto;
 }
