--- a/src/server/templates/index.pug
+++ b/src/server/templates/index.pug
@@ -11,6 +11,7 @@ html(lang='en')
         link(rel="preload", href=`${cdn}/media/fonts/Lato%20700italic.ttf`, as="font", crossorigin)
         link(rel="preload", href=`${cdn}/media/fonts/Lato%20300italic.ttf`, as="font", crossorigin)
         link(rel="stylesheet", href="https://fonts.googleapis.com/css?family=Libre+Baskerville:400,400i,700|Bellefair|Amiri", crossorigin)
+        script(src="https://player.vimeo.com/api/player.js")
         each stylesheet in styles
           style !{stylesheet}
         if (typeof(state) !== 'undefined')
