--- a/src/styles/partials/_form.scss
+++ b/src/styles/partials/_form.scss
@@ -263,6 +263,12 @@
       display: flex;
       position: relative;
       margin: 35px 0 20px 0;
+      flex-wrap: wrap;
+      .contact-msg {
+        font-style: italic;
+        font-size: 12px;
+        margin-top: 20px;
+      }
       select {
         cursor: pointer;
       }
