code for sprint57

--- a/src/components/VerticalImageSelector/styles.scss
+++ b/src/components/VerticalImageSelector/styles.scss
@@ -17,3 +17,10 @@
 .clickable {
     cursor: pointer;
 }
+
+.overlay {
+    width: 80px;
+    height: 30px;
+    position: absolute;
+    bottom: 30%;
+}
