--- a/src/containers/Sitemap/styles.scss
+++ b/src/containers/Sitemap/styles.scss
@@ -24,8 +24,6 @@
   
 
   .careers-content {
-    height: 300px;
-    background-color: lightgrey;
     .careers-image-caption {
         position: absolute;
         transform: translate(-50%, -50%);
@@ -170,3 +168,17 @@
         }
     }
 }
+
+.heading {
+    text-transform: uppercase;
+    color: tint(#000, 40%);
+    letter-spacing: 1px;
+    font-size: 14px;
+    line-height: 48px;
+    .icon {
+      font-size: 18px;
+      color: $cerise;
+      margin-right: 5px;
+      font-weight: bold;
+    }
+  }
