Fix css for contact number message

--- a/src/styles/partials/_form.scss
+++ b/src/styles/partials/_form.scss
@@ -267,7 +267,8 @@
       .contact-msg {
         font-style: italic;
         font-size: 12px;
-        margin-top: 20px;
+        margin-top: 5px;
+        letter-spacing: 0.5px;
       }
       select {
         cursor: pointer;
