--- a/src/containers/checkout/styles.scss
+++ b/src/containers/checkout/styles.scss
@@ -937,7 +937,8 @@ input[type="radio"] {
 .contact-msg {
   font-size: 11px;
   font-style: italic;
-  letter-spacing: 0;
+  letter-spacing: 0.3px;
+  color: #333;
   b {
     font-size: 12px;
     font-weight: bold;
