code for badges

--- a/src/containers/cartPage/styles.scss
+++ b/src/containers/cartPage/styles.scss
@@ -545,7 +545,8 @@ display: inline-table;
     position: absolute;
     z-index: 1;
   img {
-    width: 100%;
+    width: 80%;
+    margin: 5px;
   }
 }
 .stock-left {
