--- a/src/components/plpResultListViewItem/styles.scss
+++ b/src/components/plpResultListViewItem/styles.scss
@@ -198,7 +198,8 @@
     z-index: 2;
     left: 0;
     img {
-        width: 100%;
+        width: 70%;
+        margin: 10px 0 0 10px;
     }
 }
 
@@ -209,7 +210,8 @@
     z-index: 3;
     right: 6px;
     img {
-        width: 100%;
+        width: 70%;
+        margin: 10px 0 0 10px;
     }
 }
 
