code for hello ar images

--- a/src/components/Popups/styles.scss
+++ b/src/components/Popups/styles.scss
@@ -901,6 +901,15 @@
     color: white;
     font-size: 20px;
   }
+  .cross-hellomobile
+   {
+    position: absolute;
+    right: 0px;
+    top: -62px;
+    cursor: pointer;
+    color: white;
+    font-size: 20px;
+   }
 }
 
 
