--- a/src/components/header/styles.scss
+++ b/src/components/header/styles.scss
@@ -711,7 +711,7 @@
 width: 100%;
 //position: fixed;
 line-height: 29px;
-height: 30px;
+min-height: 30px;
 text-align: center;
 font-size: 12px;
 background-color: $summerGreen;
@@ -729,7 +729,12 @@ color: $white;
 /* Elements to animate */
 .boxx1 {
   width: 100%;
-  position: absolute;
+  padding: 2px 15px;
+  line-height: 20px;
+  // position: absolute;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   left: 0;
   animation-name: animatetxt1;
   animation-duration: 4s;
@@ -1594,18 +1599,35 @@ ul.inner-menu-mobile {
   background-color: #f9f8f5;
 }
 
-.announcement-cta {
-  display: inline;
-}
+// .announcement-cta {
+//   display: inline;
+// }
 .announcement-content {
-  display: inline-block;
+  letter-spacing: 0.5px;
+  font-size: 14px;
+  font-family: $font-Lato;
 }
 .announcement-cta-btn {
-  padding: 2px 8px;
-  width: fit-content;
+  padding: 0px 8px;
   font-size: 12px;
-  margin-top: 8px;
+  // margin-top: 4px;
   margin-left: 90px;
-  display: inline;
   cursor: pointer;
+  line-height: 20px;
+  height: 22px;
+  letter-spacing: 1px;
+  font-family: $font-Lato;
+}
+.announcement-container {
+  display: flex;
+  justify-content: center;
+  height: 100%;
+  align-items: center;
+}
+
+@media (max-width: 992px) {
+  .announcement-cta-btn {
+    margin-left: 30px;
+
+  }
 }
