code for hello z index

--- a/src/containers/pdp/styles.scss
+++ b/src/containers/pdp/styles.scss
@@ -230,3 +230,6 @@ input[type="time"]::-webkit-calendar-picker-indicator{
     height: 100px;
     width: 63px;
 }
+.details-container {
+    z-index: 1;
+}
