--- a/src/components/footer/styles.scss
+++ b/src/components/footer/styles.scss
@@ -291,7 +291,7 @@ input {
     background-size: contain;
   }
   .footer-socialicons {
-    float: left;
+    // float: left;
     .icon {
       font-family: "CustomIcons" !important;
       font-size: 20px !important;
@@ -464,9 +464,9 @@ input {
 .arrow-right-enabled {
   border-left: 6px solid tint(#000, 30%);
 }
-.px5 {
-  padding-left: 5%;
-  padding-right: 5%;
+.px3 {
+  padding-left: 3%;
+  padding-right: 3%;
 }
 .ftrHeadingWhite2 {
   color: #fff;
