--- a/src/containers/pdp/styles.scss
+++ b/src/containers/pdp/styles.scss
@@ -182,7 +182,7 @@ input[type="time"]::-webkit-calendar-picker-indicator{
     top: $header-height;
 }
 .secondary-header-container-timer {
-    top: $header-height + $timer-height +30px;
+    top: $header-height + $timer-height;
 }
 
 .imgcontainer {
