--- a/src/components/header/styles.scss
+++ b/src/components/header/styles.scss
@@ -61,7 +61,7 @@
     .menu-item {
       display: inline-block;
       padding: 0 15px;
-      cursor: pointer;
+      // cursor: pointer;
       a.menu-item-link {
         @include hdr-cat();
         display: block;
