Fix shipping and payment popup on checkout

--- a/src/containers/checkout/styles.scss
+++ b/src/containers/checkout/styles.scss
@@ -523,7 +523,7 @@
           text-align: right;
           padding: 15px;
           cursor: pointer;
-          position: fixed;
+          position: relative;
           z-index: 10;
           background-color: #fff;
           width: 100%;
