Fix hello AR icons position for desktop

--- a/src/containers/pdp/styles.scss
+++ b/src/containers/pdp/styles.scss
@@ -219,7 +219,7 @@ input[type="time"]::-webkit-calendar-picker-indicator{
     width: 130px;
     z-index: 1;
     bottom: 10%;
-    left: 34%;
+    left: calc(50% - 65px);
     cursor:  pointer !important;
 }
 
