--- a/src/components/VerticalImageSelector/styles.scss
+++ b/src/components/VerticalImageSelector/styles.scss
@@ -19,8 +19,8 @@
 }
 
 .overlay {
-    width: 90px;
+    width: 100%;
     height: 40px;
     position: absolute;
-    top: 50px;
+    top: calc(50% - 20px);
 }
