--- a/src/components/signin/styles.scss
+++ b/src/components/signin/styles.scss
@@ -192,3 +192,59 @@ input[type="checkbox"]:checked + label {
     }
   }
 }
+
+.para {
+  font-size: 15px;
+  margin-top: 20px;
+  font-family: $font-Lato;
+  letter-spacing: 1px;
+  strong {
+    font-weight: 700;
+  }
+}
+.btn {
+  margin: 30px auto 0 auto;
+  width: 180px;
+}
+.big-btn {
+  margin: 50px auto 0 auto;
+  width: 240px;
+}
+.small-txt {
+  font-size: 13px;
+  margin-top: 10px;
+}
+.mini-txt {
+  font-size: 11px;
+  a {
+    color: #000;
+  }
+}
+.big-txt {
+  a {
+    text-decoration: underline;
+    &:hover {
+      text-decoration: underline;
+    }
+  }
+ }
+ .resend-btn {
+  text-decoration: underline;
+  text-transform: uppercase;
+  color: $cerise;
+  cursor: pointer;
+  display: inline-block;
+  text-align: right;
+ }
+ .resend-btn-disabled {
+  color: tint(#000, 50%) !important;
+  cursor: default;
+ }
+
+.timer-container {
+  display: flex;
+  width: 220px;
+  margin: auto;
+  justify-content: space-between;
+  align-items: baseline;
+}
