--- a/src/components/signin/styles.scss
+++ b/src/components/signin/styles.scss
@@ -239,6 +239,7 @@ input[type="checkbox"]:checked + label {
  .resend-btn-disabled {
   color: tint(#000, 50%) !important;
   cursor: default;
+  text-decoration: none;
  }
 
 .timer-container {
