Add growl message for success email OTP verify, Fix error message css

--- a/src/components/signin/styles.scss
+++ b/src/components/signin/styles.scss
@@ -25,6 +25,10 @@
         cursor: pointer;
       }
   }
+  .verify-err-msg {
+    text-align: center;
+    margin-top: 20px;
+  }
 
   .social-login-footer {
     border-top: 1px solid #e6e6e6;
