--- a/src/styles/partials/_mixins.scss
+++ b/src/styles/partials/_mixins.scss
@@ -504,7 +504,9 @@
   font-size: 10px;
   color: tint(#000, 30%);
   background-color: rgb(170, 216, 199);
-  line-height: 42px;
+  line-height: 20px;
+  min-height: 42px;
+  padding: 10px;
   width: 100%;
   display: inline-block;
   letter-spacing: 1px;
