Fix sort menu in mobile for discount option

--- a/src/components/PlpDropDown/styles.scss
+++ b/src/components/PlpDropDown/styles.scss
@@ -47,6 +47,10 @@
           top: auto;
           bottom: 204px;
         }
+        &.mobile-filter-header-sort-discount {
+          top: auto;
+          bottom: 254px;
+        }
         .filter-cross {
             line-height: 30px;
             .icon_cross {
