--- a/src/components/PlpDropDown/styles.scss
+++ b/src/components/PlpDropDown/styles.scss
@@ -93,6 +93,7 @@
         .sort {
             height: 100%;
             overflow: scroll;
+            margin-bottom: 0;
             li {
             padding: 0 20px;
             line-height: 50px;
