Highlight L2 & L3 in mobile menu that is currently opened

--- a/src/components/header/styles.scss
+++ b/src/components/header/styles.scss
@@ -374,6 +374,14 @@
   color: #ab1e56 !important;
 }
 
+.highlight {
+  color: #ab1e56 !important;
+  font-weight: bold;
+  p {
+    color: #ab1e56 !important;
+    font-weight: bold;
+  }
+}
 .img-responsive {
   display: block;
   max-width: 100%;
