--- a/src/components/BackendOrderPopup/styles.scss
+++ b/src/components/BackendOrderPopup/styles.scss
@@ -129,7 +129,7 @@
     left: 10px;
     font-weight: 100;
     font-size: 10px;
-    color: tint(#000, 60%);
+    color: $formLabel;
     letter-spacing: 1px;
     background-color: #fff;
     padding: 3px;
