--- a/src/containers/customer/components/styles.scss
+++ b/src/containers/customer/components/styles.scss
@@ -473,7 +473,7 @@ ol {
     left: 10px;
     font-weight: 100;
     font-size: 10px;
-    color: #999;
+    color: $formLabel;
     letter-spacing: 1px;
     background-color: #fff;
     padding: 3px;
