--- a/src/containers/myAccount/components/Bridal/styles.scss
+++ b/src/containers/myAccount/components/Bridal/styles.scss
@@ -172,7 +172,7 @@
           left: 10px;
           font-weight: 100;
           font-size: 10px;
-          color: #999;
+          color: $formLabel;
           letter-spacing: 1px;
           background-color: #fff;
           padding: 3px;
@@ -554,7 +554,7 @@
         top: -8px;
         text-transform: uppercase;
         letter-spacing: 1px;
-        color: tint(#000, 50%);
+        color: $formLabel;
         background-color: #fff;
         padding: 0 3px;
         font-size: 13px;
