--- a/src/containers/myAccount/components/styles.scss
+++ b/src/containers/myAccount/components/styles.scss
@@ -413,7 +413,7 @@
     left: 10px;
     font-weight: 100;
     font-size: 10px;
-    color: #999;
+    color: $formLabel;
     letter-spacing: 1px;
     background-color: #fff;
     padding: 3px;
