--- a/src/styles/partials/_form.scss
+++ b/src/styles/partials/_form.scss
@@ -60,7 +60,7 @@
     border-radius: 0;
     @include placeholder {
       font-size: 14px;
-      color: tint(#000, 60%);
+      color: $formLabel;
       font-style: normal;
       letter-spacing: 1px;
       font-family: $font-Lato;
@@ -121,7 +121,7 @@
     left: 10px;
     font-weight: 100;
     font-size: 10px;
-    color: tint(#000, 60%);
+    color: $formLabel;
     letter-spacing: 1px;
     background-color: #fff;
     padding: 3px;
