--- a/src/styles/partials/_variables.scss
+++ b/src/styles/partials/_variables.scss
@@ -3,7 +3,8 @@
 $font-Header: "HeaderFont", "Trebuchet MS", "geneva";
 $font-Lato: "LatoFont", "Helvetica", "Arial";
 $font-Serif: "Baskerville", "Garamond", "Times";
-
+$font-Edwar: "Edwardian";
+$font-MrsEaves: "MrsEaves";
 $border: 1px solid tint(#000, 80%);
 $bp-xlarge: 120em; //breakpoint 1920px
 
