Make mobile cross icon bold on mobile cerise popup

--- a/src/components/Popups/styles.scss
+++ b/src/components/Popups/styles.scss
@@ -752,6 +752,10 @@
       z-index: 10;
       color: white;
       right: 0px;
+      i {
+        font-weight: bold;
+        opacity: 0.7;
+      }
     }
     .logo {
       position: absolute;
