Fix cerise popup for iPad

--- a/src/components/Popups/styles.scss
+++ b/src/components/Popups/styles.scss
@@ -759,9 +759,9 @@
     }
     .logo {
       position: absolute;
-      width: 70px;
-      top: 23px;
-      left: calc(50% - 35px);
+      width: 18%;
+      top: 20%;
+      left: 41%;
     }
     .baloon1 {
       position: absolute;
