code for compliance bug

--- a/src/containers/pdp/components/productDetails/styles.scss
+++ b/src/containers/pdp/components/productDetails/styles.scss
@@ -247,3 +247,16 @@
 .mobile-margin{
     margin-top: 5px;
 }
+.compliance {
+    p{
+        font-family: 'LatoFont';
+        font-size: 13px;
+        color: #9C7D50;
+        letter-spacing: .5px;
+        a{
+            color: #9C7D50;
+            text-decoration: underline;
+            cursor: pointer;
+        }
+    }
+}
