compliance css bug resolved

--- a/src/containers/pdp/components/productDetails/styles.scss
+++ b/src/containers/pdp/components/productDetails/styles.scss
@@ -248,6 +248,10 @@
     margin-top: 5px;
 }
 .compliance {
+    font-family: 'LatoFont';
+    font-size: 13px;
+    color: #9C7D50;
+    letter-spacing: .5px;
     p{
         font-family: 'LatoFont';
         font-size: 13px;
