Add HeadingCTA and TwoCTA templates for CMS popups

--- a/src/components/Popups/styles.scss
+++ b/src/components/Popups/styles.scss
@@ -398,13 +398,14 @@
   }
   .centerpage-mobile {
     position: fixed;
-    top: 50%;
-    left: 50%;
-    -webkit-transform: translate(-50%, -50%);
-    transform: translate(-50%, -50%);
+    // top: 50%;
+    // left: 50%;
+    // -webkit-transform: translate(-50%, -50%);
+    // transform: translate(-50%, -50%);
+    bottom: 0;
     height: auto !important;
     min-height: 400px;
-    width: 80vw;
+    width: 100%;
     p {
       padding: 7px 10%;
     }
@@ -492,12 +493,12 @@
   margin-right: 30px;
 }
 
-@media screen and (max-width: 320px) {
-.centerpage-mobile {
-    height: 75vh !important;
-    width: 80vw;
-  }
-}
+// @media screen and (max-width: 320px) {
+// .centerpage-mobile {
+//     height: 75vh !important;
+//     width: 80vw;
+//   }
+// }
 
 .maker-margin {
   margin-top: 55px;
@@ -1027,4 +1028,37 @@
 
 .overflow {
   overflow: hidden;
+}
+.bottom {
+  color: #777;
+  font-size: 11px;
+  font-family: $font-Lato;
+  margin-bottom: 10px;
+  margin-top: 10px;
+}
+
+.disclaimer {
+  color: #363636;
+  font-size: 13px;
+  font-family: $font-Lato;
+  margin-bottom: 10px;
+  margin-top: 10px;
+  font-weight: lighter;
+}
+
+.two-button {
+  display: flex;
+  justify-content: space-around;
+  margin-bottom: 30px;
+  .button1 {
+    width: 40%;
+    max-width: 240px;
+    position: relative;
+  }
+  .button2 {
+    width: 40%;
+    max-width: 240px;
+    position: relative;
+    background-color: white;
+  }
 }
