--- a/src/components/Popups/styles.scss
+++ b/src/components/Popups/styles.scss
@@ -11,7 +11,7 @@
       .gc-tnc {
         height: 100%;
       padding: 50px 0 30px 0;
-      overflow-y: scroll;
+      // overflow-y: scroll;
       }
       p {
         line-height: 20px;
