--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -338,6 +338,10 @@ font-weight: bold;
   margin-top: 30px;
 }
 
+.popup-heading {
+  @include c22-A-I();
+  line-height: 50px;
+}
 .gutter0 {
   padding-left: 0;
   padding-right: 0;
