--- a/src/components/Popups/styles.scss
+++ b/src/components/Popups/styles.scss
@@ -404,10 +404,11 @@
   }
   .centerpage-mobile {
     position: fixed;
-    top: 50%;
+    // top: 50%;
     // left: 50%;
-    -webkit-transform: translateY(-50%);
-    transform: translateY(-50%);
+    // -webkit-transform: translateY(-50%);
+    // transform: translateY(-50%);
+    bottom: 0;
     height: auto !important;
     min-height: 360px;
     width: 100%;
@@ -473,7 +474,7 @@
   // }
   .content {
     padding: 7px 50px;
-    margin-bottom: 20px;
+    // margin-bottom: 20px;
   }
   .icon {
     max-height: 60px;
@@ -1057,6 +1058,7 @@
   font-size: 10px;
   font-family: $font-Lato;
   margin: 10px;
+  margin-top: 30px;
   letter-spacing: 0.5px;
   font-weight: lighter;
 }
@@ -1065,6 +1067,10 @@
   display: flex;
   justify-content: space-around;
   margin-bottom: 30px;
+  &.two-button-mobile {
+    flex-direction: column-reverse;
+    align-items: center;
+  }
   .button1 {
     width: 40%;
     max-width: 240px;
