code for comment for service

--- a/src/server/templates/index.pug
+++ b/src/server/templates/index.pug
@@ -194,8 +194,8 @@ html(lang='en')
           Moengage = moe({
               app_id:!{moengage},
               debug_logs: 1,
-              cluster: "DC_3",
-              swPath: "/serviceworker.js"
+              cluster: "DC_3"
+              //- swPath: "/serviceworker.js"
           });
           Moengage.call_web_push();
         script.
