Restructure PLP, PDP for tablet

--- a/src/components/quantity/styles.scss
+++ b/src/components/quantity/styles.scss
@@ -55,7 +55,8 @@
 .error-msg{
     @include error-msg();
     text-align: center;
-    width: 110%;
+    width: 100%;
+    word-break: break-word;
     height: 15px;
     line-height: 15px;
     position: absolute;
