--- a/src/containers/pdp/styles.scss
+++ b/src/containers/pdp/styles.scss
@@ -235,3 +235,7 @@ input[type="time"]::-webkit-calendar-picker-indicator{
 .details-container {
     z-index: 1;
 }
+
+.tablet-slider-container {
+    padding: 0 120px;
+}
