--- a/src/containers/collectionLanding/styles.scss
+++ b/src/containers/collectionLanding/styles.scss
@@ -50,7 +50,7 @@
 
 .collection-block {
     margin-bottom: 35px;
-    margin-top: 35px;
+    padding-top: 35px;
 }
 
 .subc-header{
@@ -83,7 +83,7 @@
 
     .collection-block {
         margin-bottom: 35px;
-        margin-top: 120px;
+        margin-top: $header-height + $secondary-header-height;
     }
 
     .collection-block-nonliving {
