--- a/src/components/PlpDropDown/styles.scss
+++ b/src/components/PlpDropDown/styles.scss
@@ -3,7 +3,7 @@
 
 .c-sort {
     .product-number {
-      padding: 5px;
+      // padding: 5px;
       // border-top: 2px solid #efeaea;
       @include box-shadow(0px, 0px, 14px, 0px, rgba(192, 144, 144, 0.2));
       display: flex;
@@ -23,6 +23,7 @@
           border-left: 1px solid grey;
         }
         width: 50%;
+        padding: 5px;
         text-align: center;
         span {
           @include plp_subhdr_dd();
@@ -80,7 +81,7 @@
         bottom: 0;
         top: ($header-height + 42);
         left: 0;
-        z-index: 10;
+        z-index: 11;
         background-color: white;
         border-top: 1px solid #ccc;
         // -webkit-transition: all 0.5s linear;
@@ -162,7 +163,7 @@
     bottom: 50px;
     left: 0;
     align-self: flex-start;
-    z-index: 6;
+    z-index: 10;
     background-color: white;
     transition: bottom 0.3s;
     &.hide {
