--- a/src/components/Loader/styles.scss
+++ b/src/components/Loader/styles.scss
@@ -1,14 +1,14 @@
 .full-load-wrap {
   height: 100% !important;
   width: 100% !important;
-  position: absolute;
+  position: fixed;
   top:0;
+  z-index: 1000000;
   img, span {
     top: 50%;
     left: 50%;
     position: fixed;
     transform: translate(-50%, -50%);
-    z-index: 1000000;
   }
 }
 
