--- a/src/containers/myAccount/components/styles.scss
+++ b/src/containers/myAccount/components/styles.scss
@@ -7,6 +7,9 @@
   line-height: 50px;
   margin-top: 30px;
 }
+.form-heading-multi {
+  line-height: 36px;
+}
 
 .icon-signedin {
   span {
@@ -559,6 +562,12 @@
   font-size: 12px;
   font-family: $font-Lato;
   letter-spacing: 1px;
+}
+
+.back-btn {
+  font-size: 14px;
+  padding-top: 10px;
+  cursor: pointer;
 }
 
 .product-n {
