Add fit guide and size guide accordions, create toggle component

--- a/src/styles/partials/_variables.scss
+++ b/src/styles/partials/_variables.scss
@@ -18,6 +18,8 @@ $summerGreen: #8cb8aa;
 $grey: #f9f8f5;
 $disabled-input: #f2f2f2;
 $formLabel: #666;
+$light-grey: #A6A6A6;
+$very-light-grey: #EFEFEF;
 
 // Dropdown menu
 $dropdown-label-height: 32px;
