--- a/src/containers/search/styles.scss
+++ b/src/containers/search/styles.scss
@@ -438,7 +438,7 @@
     top: 10px;
     width: 18px;
     height: 18px;
-    background-color: $light-bg;
+    // background-color: $light-bg;
     border: 1px black solid;
 
   }
