--- a/src/containers/plp/styles.scss
+++ b/src/containers/plp/styles.scss
@@ -486,7 +486,7 @@
     top: 10px;
     width: 18px;
     height: 18px;
-    background-color: $light-bg;
+    background-color: white;
     border: 1px black solid;
 
   }
