--- a/src/containers/checkout/styles.scss
+++ b/src/containers/checkout/styles.scss
@@ -950,3 +950,13 @@ input[type="radio"] {
     font-size: 10px;
   }
 }
+
+.gst-title {
+  font-weight: bold;
+  line-height: 24px;
+  font-size: 13px;
+}
+.gst-desc {
+  font-size: 11px;
+  margin-bottom: 10px;
+}
