--- a/src/components/Zoom/styles.scss
+++ b/src/components/Zoom/styles.scss
@@ -48,3 +48,27 @@
     position: fixed;
     cursor: pointer;
 }
+
+.navigation-container {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    position: absolute;
+    bottom: 20px;
+    button {
+        border: none;
+        width: 40px;
+        height: 40px;
+        background: white;
+        border-radius: 50%;
+        cursor: pointer;
+        margin: 0 10px;
+        &.prev, &.next {
+            font-size: 30px;
+        }
+        &.close {
+            font-size: 12px;
+            font-weight: bold;
+        }
+    }
+}
