--- a/src/components/Sizechart/styles.scss
+++ b/src/components/Sizechart/styles.scss
@@ -40,7 +40,7 @@
     right: 0;
     bottom: 0;
     z-index: 20;
-    width: 350px;
+    width: 360px;
     font-size: 16px;
     line-height: 16px;
     display: none;
@@ -169,7 +169,7 @@
     display: -webkit-flex;
     display: flex;
     cursor: default;
-    margin-top: 29px;
+    margin-top: 30px;
     overflow-y: scroll;
     overflow-x: hidden;
 }
@@ -402,9 +402,19 @@
   justify-content: center;
   table.table-content {
     display: inline-block;
-    overflow-x: scroll;
+    overflow-x: overlay;
     text-align: center;
     border: 1px solid #DDDDDD;
+    &.scrollable {
+      &::-webkit-scrollbar {
+        height: 4px;
+      }
+      &::-webkit-scrollbar-thumb {
+        border-radius: 2px;
+        border: 2px solid #a6a6a6;
+      }
+      &::-webkit-scrollbar-button {display:none}
+    }
     &:first-of-type {
       text-align: left;
       overflow-x: auto;
