--- a/src/containers/shopLocator/styles.scss
+++ b/src/containers/shopLocator/styles.scss
@@ -164,6 +164,7 @@ margin-top: $main-header;
   text-transform: uppercase;
   font-size: 14px;
   letter-spacing: 1px;
+  max-width: 310px;
   }
 }
 }
@@ -310,5 +311,28 @@ position: absolute;
   }
   .paddTop-80 {
     padding-top: 60px;
+  }
+}
+
+// ipad fix
+@media screen and (max-width: 1100px) {
+  .view-directions-block{
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    a {
+      text-align: left;
+    }
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .view-directions-block{
+    display: flex;
+    flex-direction: row;
+    gap: 10px;
+    a {
+      text-align: left;
+    }
   }
 }
