Product CTA Fix

--- a/src/components/pairItWith/PDPLooksItem/styles.scss
+++ b/src/components/pairItWith/PDPLooksItem/styles.scss
@@ -226,3 +226,10 @@
         line-height: 38px;
     }
 }
+
+
+@media screen and (max-width: 820px) {
+    .add-to-bag-list-view {
+        font-size: 9px;
+    }
+}
