--- a/src/components/pairItWith/PDPLooksItem/styles.scss
+++ b/src/components/pairItWith/PDPLooksItem/styles.scss
@@ -36,6 +36,7 @@
     }
     .product-size-list{
         display: flex;
+        flex-wrap: nowrap;
     }
 }
 
@@ -227,9 +228,9 @@
     }
 }
 
-
 @media screen and (max-width: 820px) {
     .add-to-bag-list-view {
         font-size: 9px;
     }
 }
+
