CTA line height fix

--- a/src/components/pairItWith/PDPLooksItem/styles.scss
+++ b/src/components/pairItWith/PDPLooksItem/styles.scss
@@ -232,5 +232,10 @@
     .add-to-bag-list-view {
         font-size: 9px;
     }
+    .actions {
+        .add-to-bag-list-view {
+            line-height: 30px;
+        }
+    }
 }
 
