--- a/src/components/ProductCounter/styles.scss
+++ b/src/components/ProductCounter/styles.scss
@@ -1,3 +1,5 @@
+@import "../../styles/partials/variables";
+
 .scroll-down-up
 {  
 background: #fff 0% 0% no-repeat padding-box;
@@ -11,29 +13,25 @@ box-shadow: 3px 3px 10px #00000029;
 opacity: 1;
 position:fixed;
 z-index: 10;
+    .counter {
+        height: 100%;
+        color: #000000CC;
+        opacity: 1;
+        font-size: 14px;
+        display:flex;
+        border: none;
+        align-items: center;
+        justify-content: space-between;
+        padding: 0 10px;
+        .counter-number {
+            font-family: $font-Lato;
+            display:flex;
+            letter-spacing: 0px;
+            border:none;
+        }
+        .icon {
+            font-size: 20px;
+            transform: rotate(-90deg);
+        }
+    }
 }
-.counter
-{
-    top: 138px;
-    left: 200px;
-    width: 27px;
-    height: 100%;
-    color: #000000CC;
-    opacity: 1;
-    font-size: 14px;
-    display:flex;
-    border: none;
-    align-items: center;
-}
-.counter-number
-{
-    font-family: Arial, Helvetica, sans-serif;
-    display:flex;
-    text-align: left;
-    letter-spacing: 0px;
-    top: 138px;
-    border:none;
-    
-
-}
-
