--- a/src/components/Sizechart/styles.scss
+++ b/src/components/Sizechart/styles.scss
@@ -170,7 +170,7 @@
     display: flex;
     cursor: default;
     margin-top: 30px;
-    overflow-y: scroll;
+    overflow-y: auto;
     overflow-x: hidden;
 }
 
@@ -463,6 +463,14 @@
       }
     }
   }
+}
+
+.style-guide-single-section{
+  display: inline-flex;
+  font-size: 14px;
+  width: 100%;
+  margin: 0;
+  justify-content: center;
 }
 
 .footer {
